--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body{
 
 
 .side-menu{
-    height: 79%;
+    height: 79vh;
     width: 15%;
     font-size: 20px;
     float: left;
@@ -174,3 +174,163 @@ body{
         display: block;
     }
 }
+
+/* slider css*/
+.slider{
+    width: 85%;
+    margin-left: 15%;
+    padding: 0 10px;
+    height: 79%;
+}
+.carousel{
+    box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.5)
+}
+.carousel-indicators{
+    z-index: 4!important;
+}
+.carousel-item img{
+    height: 79vh!important;
+}
+@media only screen and (max-width: 980px){
+    .slider{
+        width:100%;
+        margin-left: 0;
+    }
+}
+
+
+/* featured categories css */
+.featured-categories{
+    margin: 50px 0;
+}
+.featured-categories img{
+    width: 100%;
+    padding: 20px 0;
+    transition: 1s;
+    cursor: pointer;
+}
+.featured-categories img:hover{
+
+    transform: scale(1.1)
+}
+
+/* on sale css */
+.title-box{
+    background-color: orange;
+    color: #fff;
+    width: 180px;
+    padding: 4px 10px;
+    height: 40px;
+    margin-bottom: 30px;
+    display: flex;
+}
+.title-box h2{
+    font-size: 24px;
+
+}
+.title-box::after{
+    content: '';
+    border-top: 40px solid orange;
+    border-right: 50px solid transparent;
+    position: absolute;
+    display: flex;
+    margin-top: -4px;
+    margin-left: 170px;
+}
+/* product top css
+ */
+
+ .product-top img{
+     width: 100%;
+     height: 250px;
+ }
+ .overlay-right{
+     display:block;
+     opacity: 0;
+     position: absolute;
+     top: 10%;
+     margin-left: 0;
+     width: 70px;
+
+ }
+
+ .overlay-right .fa{
+     cursor: pointer;
+     background-color: orange;
+     color: #fff;
+     height: 35px;
+     width: 35px;
+     font-size: 20px;
+     padding: 7px;
+     margin-top: 5%;
+     margin-bottom: 5%;
+
+ }
+
+ .overlay-right .btn-secondary{
+     background: none!important;
+     box-shadow: none!important;
+     border: none!important;
+ }
+ .product-top:hover .overlay-right{
+     opacity: 1;
+     margin-left: 5%;
+     transition: 0.5s ease-in;
+ }
+
+ /* product bottom css
+  */
+  .product-bottom .fa{
+      color: orange;
+      font-size: 10px;
+
+  }
+  .product-bottom h3{
+      font-size: 20px;
+      font-weight: bold;
+      color: gray;
+  }
+  .product-bottom h5{
+      font-size: 15px;
+      padding-bottom: 10px;
+  }
+
+  /* mew product css */
+  .new-products{
+      margin: 50xp 0;
+  }
+
+  /* feature css  */
+  .website-features
+  {
+      margin: 60px 0;
+  }
+  .website-features img{
+      width: 20%;
+  }
+  .feature-text{
+      float:right;
+      width: 80%;
+      padding-left: 20px;
+  }
+  .feature-box{
+      padding-top: 20px;
+
+  }
+
+  /* footer */
+  .footer{
+      margin-top: 50px;
+      background: #000;
+      color: #fff;
+  }
+
+  .footer h1{
+      font-size: 15px;
+      margin: 15px 0;
+
+  }
+
+  .footer p{
+      font-size: 12px;
+  }
